--- a/maquette3.css
+++ b/maquette3.css
@@ -45,7 +45,7 @@ a{
 }
 
 .div1{
-    background-image: url("../maquette3/image3/img1.jpeg");
+    background-image: url("./image3/img1.jpeg");
     background-position: center;
     background-size: cover;
     width: 100%;
@@ -94,7 +94,7 @@ a{
     width: 45%;
     border-radius: 20px;
     margin-left: 3%;
-    background-image: url("../maquette3/image3/i4.jpg");
+    background-image: url("./image3/i4.jpg");
     margin-top: 3%;
     height: 60%;
     background-size: cover;
@@ -105,7 +105,7 @@ a{
     width: 45%;
     border-radius: 20px;
     margin-left: 3%;
-    background-image: url("../maquette3/image3/Img.png");
+    background-image: url("./image3/Img.png");
     margin-top: 3%;
     height: 60%;
     background-position: center;
@@ -157,7 +157,7 @@ a{
 .div4{
     width: 100%;
     height: 700px;
-    background-image: url("../maquette3/image3/im.jpg");
+    background-image: url("./image3/im.jpg");
     background-position: left;
    justify-content: center;
     display: flex;
@@ -214,7 +214,7 @@ a{
     border-radius: 15px;   
 }
 .div5{
-    background-image: url("../maquette3/image3/img6.jpg");
+    background-image: url("./image3/img6.jpg");
     background-color: #C4C4C4;
     background-size: cover;
     background-position: center;
@@ -247,7 +247,7 @@ a{
     
 }
 .div6-1{
-    background-image: url("../maquette3/image3/img8.jpg");
+    background-image: url("./image3/img8.jpg");
     background-position: center;
     background-size: cover;
     height: 25vh;
@@ -256,7 +256,7 @@ a{
     
 }
 .div6-2{
-    background-image: url("../maquette3/image3/img7.jpg");
+    background-image: url("./image3/img7.jpg");
     background-position: center;
     background-size: cover;
     height: 25vh;
